# rust-projects-playground

./: README.md
cat-breeds-k-means/: Cargo.toml  results.csv  training_data.csv
catsay/: Cargo.toml  README  another_cat
catsay/src/: main.rs  options.rs
catsay/tests/: integration_test.rs
tui_catsay/: Cargo.toml
tui_catsay/src/: main.rs
